# yoita

./: .gitignore  Cargo.toml  README.md  yoita.toml
.github/workflows/: ci.yml
docs/: steamcmd-backend.md
examples/: steam-workshop.toml
src/: config.rs  error.rs  file.rs  lib.rs  main.rs  state.rs  toml.rs
src/steam/: community.rs  content.rs  mod.rs  provider.rs  service.rs  steamcmd.rs  transport.rs  types.rs
tests/: example_config.rs  steamcmd_download.rs
tests/fixtures/: yoita.download.example.toml  yoita.example.toml  yoita.final.toml  yoita.name.toml
