[package]
name = "yoita"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = { version = "0.8", features = ["preserve_order"] }
anyhow = "1.0.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
